# chameleon-pq

./: .gitignore  Cargo.toml  DESIGN.de.md  DESIGN.md  LICENSE  README.de.md  README.md  SECURITY.de.md  SECURITY.md  config.example.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: frame_decode.rs  handshake_decode.rs  hsobf_parsers.rs  obf_parsers.rs  reassembler.rs  session_decrypt.rs
gui/: Cargo.toml  build.rs
gui/assets/: chameleon.rc
gui/src/: main.rs
packaging/windows/: README-windows.txt
src/: aead.rs  client.rs  config.rs  crypto.rs  dns.rs  engine.rs  error.rs  frame.rs  hsobf.rs  killswitch.rs  lib.rs  main.rs  net.rs  obf.rs  pacer.rs  rekey.rs  route.rs  session.rs  setup.rs  tun_iface.rs  tunnel.rs  tunnel_loops.rs  udp.rs
tests/: e2e_tunnel.rs  fuzz_parsers.rs  integration.rs
