[package]
name = "chameleon-gui"
version = "0.1.0"
edition = "2021"
publish = false
description = "Desktop GUI client for Chameleon-PQ (iced, pure Rust)"

# Eigen crate (net als fuzz/): houdt de zware GUI-deps buiten de core-crate.
# De root is geen workspace, dus `cargo build` in de root negeert deze crate;
# bouw expliciet met: `cargo build --manifest-path gui/Cargo.toml`.

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros"] }
chameleon-pq = { path = ".." }
# Diagnostiek: de GUI heeft (anders dan de CLI) geen console op Windows, dus
# schrijven we tracing-logs én panics naar een logbestand naast de binary.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Native bestandsdialoog om de config.toml te kiezen — TARGET-SPECIFIEK:
# Windows/macOS gebruiken hun native dialoog (geen extra systeemlibs); Linux de
# xdg-desktop-portal i.p.v. GTK, zodat het op de headless buildbox (en CI-ubuntu)
# compileert zonder GTK-dev-libs. Zo trekt de Windows-CI-job GEEN ashpd/zbus binnen.
[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["tokio"] }

[[bin]]
name = "chameleon-gui"
path = "src/main.rs"
