[package]
name = "chameleon-gui"
# NOT the version shown in the app UI/title bar — that's chameleon::VERSION,
# read from the CORE crate's Cargo.toml (../Cargo.toml) via the path
# dependency below, and bumps automatically with the normal release step.
# This field is just this internal package's own (unpublished) identifier.
version = "0.1.0"
edition = "2021"
publish = false
description = "Desktop GUI client for Chameleon-PQ (iced, pure Rust)"

# Own crate (like fuzz/): keeps the heavy GUI deps out of the core crate.
# The root is not a workspace, so `cargo build` in the root ignores this crate;
# build it explicitly with: `cargo build --manifest-path gui/Cargo.toml`.

[dependencies]
iced = { version = "0.13", features = ["tokio", "svg", "image"] }
open = "5"                                # open the repo URL in the default browser
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros"] }
chameleon-pq = { path = ".." }
# Diagnostics: the GUI (unlike the CLI) has no console on Windows, so we write
# tracing logs and panics to a log file next to the binary.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Native file dialog to pick the config.toml — TARGET-SPECIFIC:
# Windows/macOS use their native dialog (no extra system libs); Linux uses the
# xdg-desktop-portal instead of GTK, so it compiles on the headless build box (and
# CI ubuntu) without GTK dev libs. This way the Windows CI job pulls in NO ashpd/zbus.
[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["tokio"] }

[[bin]]
name = "chameleon-gui"
path = "src/main.rs"
